fdo#58562: Ensure internal data is always used when pasting to another doc.

Without this, pasting a chart object from one Calc doc to another may
occasionally incorrectly switch to range references *if* the destination
document contains the "right" set of sheet names.  With this fix, pasted
chart objects always switch to internal cached data source when pasting
to another document, while retaining range references when pasting within
the same document.

Change-Id: If1dbc854c5faae62f06ece155fad470b229ca0c7
Reviewed-on: https://gerrit.libreoffice.org/1835
Tested-by: Noel Power <noel.power@suse.com>
Reviewed-by: Noel Power <noel.power@suse.com>